Created Database and User class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mathetistics</string>
+    <string name="title_activity_topic_selection">TopicSelection</string>
 </resources>
