Learning views updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mathetistics</string>
+    <string name="app_name">Math Relay</string>
     <string name="title_activity_topic_selection">TopicSelection</string>
     <string name="title_activity_compete">Compete</string>
     <string name="action_settings">Settings</string>
@@ -17,6 +17,4 @@
     <string name="add_item">Add New Item</string>
     <string name="action_logout">Logout</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
